--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,244 +1,30 @@
-.select-bank {
-  margin-left: -8px;
-  margin-right: -8px; }
-  .select-bank__item {
-    margin-bottom: 15px;
-    padding-left: 8px;
-    padding-right: 8px; }
-    .select-bank__item__label {
-      background: #FFFFFF;
-      border: 1px solid #EBEBEB;
-      box-sizing: border-box;
-      border-radius: 10px;
-      min-height: 100px;
-      width: 100%;
-      display: flex;
-      place-content: space-around;
-      place-items: center;
-      flex-direction: column;
-      text-align: center;
-      position: relative;
-      padding: 8px 0;
-      cursor: pointer; }
-      .select-bank__item__label .checkmark {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        border: 1px solid transparent;
-        border-radius: 10px; }
-        .select-bank__item__label .checkmark:hover {
-          border-color: #597EF7; }
-      .select-bank__item__label__checkbox {
-        display: none; }
-        .select-bank__item__label__checkbox:checked ~ .checkmark {
-          border-color: #597EF7; }
-          .select-bank__item__label__checkbox:checked ~ .checkmark::before {
-            content: "";
-            width: 18px;
-            height: 19px;
-            background-image: url(../images/wallet/check.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            z-index: 9; }
-      .select-bank__item__label__img img {
-        max-height: 30px;
-        max-width: 30px; }
-      .select-bank__item__label__title {
-        font-size: 14px;
-        line-height: 14px;
-        text-align: center;
-        color: #000000; }
-
-.deposit-amount {
-  margin-left: -8px;
-  margin-right: -8px; }
-  .deposit-amount__select-bank, .deposit-amount__select-promotion {
-    display: flex;
-    place-content: space-between;
-    place-items: center;
-    border-bottom: 2px solid #EEEEEE;
-    padding: 10px 0;
-    margin-bottom: 40px;
-    cursor: pointer; }
-    .deposit-amount__select-bank__input__label, .deposit-amount__select-promotion__input__label {
+.world-cup-block {
+  padding-bottom: 0; }
+  .world-cup-block__content {
+    padding: 30px 0;
+    position: relative;
+    background-size: cover;
+    background-repeat: repeat-y;
+    background-image: url(../images/f70f8b4384ee4d20a512f8fae66140d8.jpeg); }
+  .world-cup-block .block-content {
+    border-radius: 20px;
+    background: #fff;
+    border: 1px solid #e0e7fa;
+    -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    margin-bottom: 30px;
+    height: 100%; }
+    .world-cup-block .block-content.text h3 {
+      color: #fcb33c;
+      text-transform: uppercase;
+      font-size: 20px;
       font-weight: 600;
-      font-size: 14px;
-      line-height: 14px;
-      color: #000000;
-      padding-bottom: 10px;
-      text-align: left; }
-    .deposit-amount__select-bank__input__placeholder, .deposit-amount__select-promotion__input__placeholder {
-      font-weight: 300;
-      font-size: 16px;
-      line-height: 14px;
-      color: #A5A9B3; }
-  .deposit-amount__summary {
-    margin-top: -15px;
-    margin-bottom: 15px; }
-    .deposit-amount__summary__title {
-      background: #597EF7;
-      border-radius: 10px 10px 0px 0px;
-      padding: 15px;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 14px;
-      text-align: center;
-      color: #FFFFFF; }
-    .deposit-amount__summary__content {
-      background: #FFFFFF;
-      border: 1px solid #A5A9B3;
-      border-top: none;
-      box-sizing: border-box;
-      border-radius: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-      padding: 15px;
-      text-align: left;
-      font-size: 16px;
-      line-height: 20px;
-      color: #000000; }
-      .deposit-amount__summary__content__sub {
-        background: #EEEEEE;
-        border-radius: 10px;
-        padding: 15px 30px;
-        margin: 10px; }
-  .deposit-amount__action {
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 12px;
-    text-align: center;
-    color: #000000; }
-    .deposit-amount__action .btn {
-      min-height: 50px;
-      font-style: normal;
+      margin-bottom: 20px; }
+    .world-cup-block .block-content.text .title {
+      margin-bottom: 10px;
       font-weight: 600;
-      font-size: 18px;
-      line-height: 16px;
-      text-align: center;
-      color: #FFFFFF;
-      text-transform: uppercase; }
-      .deposit-amount__action .btn-choose {
-        min-height: 40px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 14px;
-        text-align: center;
-        color: #000000;
-        margin-bottom: 40px;
-        border: 1px solid #A5A9B3;
-        box-sizing: border-box;
-        border-radius: 10px;
-        display: flex;
-        place-items: center;
-        place-content: center;
-        gap: 5px; }
-        .deposit-amount__action .btn-choose:hover, .deposit-amount__action .btn-choose:active {
-          background-color: #fff; }
-        .deposit-amount__action .btn-choose img {
-          max-width: 24px; }
-  .deposit-amount__input-group {
-    margin-bottom: 15px; }
-    .deposit-amount__input-group .form-control {
-      background: #FFFFFF;
-      border: 1px solid #A5A9B3;
-      box-sizing: border-box;
-      border-radius: 10px !important;
-      min-height: 40px; }
-      .deposit-amount__input-group .form-control::placeholder {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 14px;
-        color: #A5A9B3; }
-    .deposit-amount__input-group .input-group-text {
-      background: #FFFFFF;
-      border: none;
-      font-style: normal;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 14px;
-      color: #000000;
-      padding-left: 0; }
-  .deposit-amount .deposit-minimun-crypto {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 14px;
-    color: #8590AD; }
-    .deposit-amount .deposit-minimun-crypto span {
-      font-weight: 600;
-      font-size: 12px;
-      line-height: 14px;
-      color: #FF0000; }
-  .deposit-amount__item {
-    margin-bottom: 15px;
-    padding-left: 8px;
-    padding-right: 8px; }
-    .deposit-amount__item .info-link {
-      font-weight: 600;
-      font-size: 12px;
-      line-height: 14px;
-      text-align: right;
-      color: #4080FF;
-      display: flex;
-      place-content: flex-start;
-      place-items: center;
-      gap: 5px;
-      height: 100%; }
-      .deposit-amount__item .info-link .icon {
-        max-width: 18px; }
-    .deposit-amount__item__label {
-      background: #FFFFFF;
-      border: 1px solid #EEEEEE;
-      box-sizing: border-box;
-      border-radius: 10px;
-      min-height: 50px;
-      width: 100%;
-      display: flex;
-      place-content: space-around;
-      place-items: center;
-      flex-direction: column;
-      text-align: center;
-      position: relative;
-      padding: 8px 0;
-      cursor: pointer; }
-      .deposit-amount__item__label .checkmark {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        border: 1px solid transparent;
-        border-radius: 10px; }
-      .deposit-amount__item__label:hover .checkmark {
-        border-color: #597EF7; }
-      .deposit-amount__item__label__checkbox {
-        display: none; }
-        .deposit-amount__item__label__checkbox:checked ~ .checkmark {
-          border-color: #597EF7; }
-          .deposit-amount__item__label__checkbox:checked ~ .checkmark::before {
-            content: "";
-            width: 18px;
-            height: 19px;
-            background-image: url(../images/wallet/check.png);
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            z-index: 9; }
-      .deposit-amount__item__label__title {
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 14px;
-        text-align: center;
-        color: #000000; }
+      font-size: 18px; }
 
 #selectLanguage .modal-dialog {
   padding: 0 30px;
