--- a/src/assets/scss/_page/navbar.scss
+++ b/src/assets/scss/_page/navbar.scss
@@ -51,6 +51,13 @@
                 height: 20px;
                 margin-bottom: 7px;
 
+                &.world-cup {
+                  img {
+                    max-height: 45px;
+                    max-width: initial;
+                  }
+                }
+
                 img {
                   max-width: 20px;
                   max-height: 20px;
@@ -647,7 +654,7 @@
 
               @media only screen and (max-width: 1280px) {
                 font-size: 12px !important;
-  
+
                 &.disabled {
                   padding-left: 5px !important;
                   padding-right: 5px !important;
