--- a/src/assets/scss/_page/navbar.scss
+++ b/src/assets/scss/_page/navbar.scss
@@ -1,5 +1,5 @@
 .my-navbar {
-
+  
   &__main {
     top: 35px;
     min-height: 80px;
@@ -7,6 +7,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     padding: 0;
     min-width: var(--min-with);
+    min-width: 1090px !important;
 
     &__container {
       .navbar-brand {
@@ -702,6 +703,147 @@
                 }
               }
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.mobile-navbar {
+  // max-width: var(--max-with-mobile);
+
+  &.nav-child {
+    background: #FFFFFF;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+    min-height: 50px;
+
+    .title {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 21px;
+      text-align: center;
+      color: #000000;
+      text-transform: uppercase;
+    }
+
+    img {
+      max-width: 30px;
+    }
+  }
+
+  &.fixed-top {
+    background-color: #FFFFFF;
+    padding: 0;
+    left: auto;
+    right: auto;
+    width: 100%;
+
+    .content {
+      display: flex;
+      min-height: 50px;
+
+      #navMenu {
+        width: 80px;
+        // width: 30px;
+        min-width: auto;
+        padding-left: 0;
+        padding-right: 0;
+        text-align: left;
+
+        &:focus {
+          box-shadow: none;
+        }
+
+        img {
+          // width: 30px;
+          width: 20px;
+        }
+      }
+
+      &__customer_service {
+        width: 80px;
+        font-style: normal;
+        display: flex;
+        place-content: center;
+        place-items: center;
+        gap: 5px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        color: #597EF7;
+
+        img {
+          // width: 28px;
+          width: 25px;
+        }
+      }
+
+      &__logo {
+        max-width: 140px;
+        // max-width: 145px;
+        // margin-left: 45px;
+      }
+    }
+  }
+
+  &.fixed-bottom {
+    min-height: 60px;
+    background-color: #FFFFFF;
+    box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
+    left: auto;
+    right: auto;
+    width: 100%;
+
+    .content {
+      display: flex;
+      place-content: space-between;
+      place-items: center;
+      text-align: center;
+
+      .nav-item {
+        min-width: 50px;
+        text-decoration: none;
+
+        .img {
+          min-height: 30px;
+          display: flex;
+          place-content: center;
+          place-items: center;
+          width: 30px;
+          margin: auto;
+
+          // filter: grayscale(90%);
+          .active {
+            display: none;
+          }
+        }
+
+        .text {
+          font-style: normal;
+          font-size: 12px;
+          line-height: 14px;
+          text-align: center;
+          color: rgba(0, 0, 0, 0.5);
+        }
+
+        &.active {
+          .img {
+
+            // filter: grayscale(0%);
+            img {
+              display: none;
+
+              &.active {
+                display: block;
+              }
+            }
+          }
+
+          .text {
+            color: #597EF7;
           }
         }
       }
