--- a/assets/css/_base/index.css
+++ b/assets/css/_base/index.css
@@ -18,7 +18,6 @@ body {
   font-size: var(--default-font-size);
   line-height: 16px;
   font-weight: 300;
-  min-width: var(--min-with);
   margin: auto;
   font-family: 'Roboto', sans-serif;
   min-height: 100vh;
@@ -112,6 +111,10 @@ img {
   padding-top: 120px;
   padding-bottom: 80px;
   min-height: 100vh; }
+  @media only screen and (max-width: 992px) {
+    .main {
+      padding-top: 50px;
+      padding-bottom: 50px !important; } }
 
 a {
   color: #597EF7;
