--- a/assets/css/_page/index.css
+++ b/assets/css/_page/index.css
@@ -4,7 +4,8 @@
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 0;
-  min-width: var(--min-with); }
+  min-width: var(--min-with);
+  min-width: 1090px !important; }
   .my-navbar__main__container .navbar-brand {
     padding: 0;
     padding-left: 10px;
@@ -454,6 +455,93 @@
       .my-navbar__top__container .navbar-nav.nav-right .nav-item.nav-info.welcome .nav-link {
         font-size: 12px !important; } }
 
+.mobile-navbar.nav-child {
+  background: #FFFFFF;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+  min-height: 50px; }
+  .mobile-navbar.nav-child .title {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #000000;
+    text-transform: uppercase; }
+  .mobile-navbar.nav-child img {
+    max-width: 30px; }
+
+.mobile-navbar.fixed-top {
+  background-color: #FFFFFF;
+  padding: 0;
+  left: auto;
+  right: auto;
+  width: 100%; }
+  .mobile-navbar.fixed-top .content {
+    display: flex;
+    min-height: 50px; }
+    .mobile-navbar.fixed-top .content #navMenu {
+      width: 80px;
+      min-width: auto;
+      padding-left: 0;
+      padding-right: 0;
+      text-align: left; }
+      .mobile-navbar.fixed-top .content #navMenu:focus {
+        box-shadow: none; }
+      .mobile-navbar.fixed-top .content #navMenu img {
+        width: 20px; }
+    .mobile-navbar.fixed-top .content__customer_service {
+      width: 80px;
+      font-style: normal;
+      display: flex;
+      place-content: center;
+      place-items: center;
+      gap: 5px;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 14px;
+      color: #597EF7; }
+      .mobile-navbar.fixed-top .content__customer_service img {
+        width: 25px; }
+    .mobile-navbar.fixed-top .content__logo {
+      max-width: 140px; }
+
+.mobile-navbar.fixed-bottom {
+  min-height: 60px;
+  background-color: #FFFFFF;
+  box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
+  left: auto;
+  right: auto;
+  width: 100%; }
+  .mobile-navbar.fixed-bottom .content {
+    display: flex;
+    place-content: space-between;
+    place-items: center;
+    text-align: center; }
+    .mobile-navbar.fixed-bottom .content .nav-item {
+      min-width: 50px;
+      text-decoration: none; }
+      .mobile-navbar.fixed-bottom .content .nav-item .img {
+        min-height: 30px;
+        display: flex;
+        place-content: center;
+        place-items: center;
+        width: 30px;
+        margin: auto; }
+        .mobile-navbar.fixed-bottom .content .nav-item .img .active {
+          display: none; }
+      .mobile-navbar.fixed-bottom .content .nav-item .text {
+        font-style: normal;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.5); }
+      .mobile-navbar.fixed-bottom .content .nav-item.active .img img {
+        display: none; }
+        .mobile-navbar.fixed-bottom .content .nav-item.active .img img.active {
+          display: block; }
+      .mobile-navbar.fixed-bottom .content .nav-item.active .text {
+        color: #597EF7; }
+
 .footer {
   background: #353F4B;
   padding-top: 30px;
@@ -796,15 +884,19 @@
 
 .world-cup-page__top-banner img {
   width: 100%; }
+  @media only screen and (max-width: 576px) {
+    .world-cup-page__top-banner img {
+      min-height: 200px;
+      object-fit: cover; } }
 
 .world-cup-page__container__block_content {
   border-radius: 15px;
   height: 100%;
-  background-size: 101%;
+  background-size: initial;
   background-repeat: no-repeat;
   background-image: url(../images/world-cup/en/BOX.png);
   background-position: center;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 25px; }
   .world-cup-page__container__block_content.event-detail {
     background-image: none;
@@ -853,39 +945,60 @@
     font-size: 20px;
     font-weight: 600;
     color: #fff;
-    padding: 8px 15px;
+    padding: 3px 15px;
     display: inline-block; }
   .world-cup-page__container__block_content__table {
     margin-top: 15px; }
-    .world-cup-page__container__block_content__table table {
+    .world-cup-page__container__block_content__table .table-footer {
+      text-align: right;
+      padding-top: 10px;
+      border-top: 2px solid #999;
+      display: flex;
+      place-content: flex-end;
+      place-items: center;
+      gap: 5px;
+      font-weight: 600;
+      color: initial; }
+    .world-cup-page__container__block_content__table .table {
       margin-bottom: 0; }
-      .world-cup-page__container__block_content__table table > :not(caption) > * > * {
+      .world-cup-page__container__block_content__table .table > :not(caption) > * > * {
         padding-top: 10px;
         padding-bottom: 10px; }
-      .world-cup-page__container__block_content__table table thead tr th {
+      .world-cup-page__container__block_content__table .table thead tr th {
         background-image: url(../images/world-cup/en/PINK_BAR.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         color: #fff;
-        border-right: 3px solid #f2f2f4; }
-        .world-cup-page__container__block_content__table table thead tr th:last-child {
+        border-right: 3px solid #f2f2f4;
+        font-size: 18px; }
+        .world-cup-page__container__block_content__table .table thead tr th:last-child {
           border-right: none; }
-      .world-cup-page__container__block_content__table table tbody {
+      .world-cup-page__container__block_content__table .table tbody {
         border-top: none !important; }
-        .world-cup-page__container__block_content__table table tbody tr td {
+        .world-cup-page__container__block_content__table .table tbody tr td {
           border-bottom: none; }
 
 .world-cup-page__container .play-now {
   background-size: cover;
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
   background-image: url(../images/world-cup/en/bg_loading_bonus.jpg);
+  background-position: center;
   position: relative;
   border: 3px solid #cf3c66;
   border-radius: 8px;
   min-height: 500px; }
+  @media only screen and (max-width: 768px) {
+    .world-cup-page__container .play-now {
+      min-height: 300px; } }
+  @media only screen and (max-width: 576px) {
+    .world-cup-page__container .play-now {
+      min-height: 250px; } }
+  @media only screen and (max-width: 426px) {
+    .world-cup-page__container .play-now {
+      min-height: 200px; } }
   .world-cup-page__container .play-now > div {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     content: "";
     width: 100%;
     height: 100%;
@@ -913,11 +1026,17 @@
       font-size: 20px;
       font-weight: 600;
       color: #fff; }
+    @media only screen and (max-width: 768px) {
+      .world-cup-page__container .play-now__ticker_remaining {
+        display: none; } }
   .world-cup-page__container .play-now__world-cup-logo {
     width: 100px;
     right: 30px;
     top: 15px;
     position: absolute; }
+    @media only screen and (max-width: 768px) {
+      .world-cup-page__container .play-now__world-cup-logo {
+        display: none; } }
   .world-cup-page__container .play-now__tap-to-play {
     position: absolute;
     left: 0;
@@ -933,10 +1052,16 @@
     font-weight: 600;
     color: #fff;
     text-transform: uppercase; }
+    @media only screen and (max-width: 426px) {
+      .world-cup-page__container .play-now__tap-to-play {
+        font-size: 18px; } }
     .world-cup-page__container .play-now__tap-to-play img {
       max-width: 90px; }
       .world-cup-page__container .play-now__tap-to-play img:hover {
         opacity: 0.8; }
+      @media only screen and (max-width: 426px) {
+        .world-cup-page__container .play-now__tap-to-play img {
+          max-width: 50px; } }
 
 .world-cup-page__container__how-to-play-img {
   width: 100%;
