--- a/assets/css/_page/world-cup.css
+++ b/assets/css/_page/world-cup.css
@@ -1,14 +1,18 @@
 .world-cup-page__top-banner img {
   width: 100%; }
+  @media only screen and (max-width: 576px) {
+    .world-cup-page__top-banner img {
+      min-height: 200px;
+      object-fit: cover; } }
 
 .world-cup-page__container__block_content {
   border-radius: 15px;
   height: 100%;
-  background-size: 101%;
+  background-size: initial;
   background-repeat: no-repeat;
   background-image: url(../images/world-cup/en/BOX.png);
   background-position: center;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 25px; }
   .world-cup-page__container__block_content.event-detail {
     background-image: none;
@@ -57,39 +61,60 @@
     font-size: 20px;
     font-weight: 600;
     color: #fff;
-    padding: 8px 15px;
+    padding: 3px 15px;
     display: inline-block; }
   .world-cup-page__container__block_content__table {
     margin-top: 15px; }
-    .world-cup-page__container__block_content__table table {
+    .world-cup-page__container__block_content__table .table-footer {
+      text-align: right;
+      padding-top: 10px;
+      border-top: 2px solid #999;
+      display: flex;
+      place-content: flex-end;
+      place-items: center;
+      gap: 5px;
+      font-weight: 600;
+      color: initial; }
+    .world-cup-page__container__block_content__table .table {
       margin-bottom: 0; }
-      .world-cup-page__container__block_content__table table > :not(caption) > * > * {
+      .world-cup-page__container__block_content__table .table > :not(caption) > * > * {
         padding-top: 10px;
         padding-bottom: 10px; }
-      .world-cup-page__container__block_content__table table thead tr th {
+      .world-cup-page__container__block_content__table .table thead tr th {
         background-image: url(../images/world-cup/en/PINK_BAR.png);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
         color: #fff;
-        border-right: 3px solid #f2f2f4; }
-        .world-cup-page__container__block_content__table table thead tr th:last-child {
+        border-right: 3px solid #f2f2f4;
+        font-size: 18px; }
+        .world-cup-page__container__block_content__table .table thead tr th:last-child {
           border-right: none; }
-      .world-cup-page__container__block_content__table table tbody {
+      .world-cup-page__container__block_content__table .table tbody {
         border-top: none !important; }
-        .world-cup-page__container__block_content__table table tbody tr td {
+        .world-cup-page__container__block_content__table .table tbody tr td {
           border-bottom: none; }
 
 .world-cup-page__container .play-now {
   background-size: cover;
-  background-repeat: repeat-y;
+  background-repeat: no-repeat;
   background-image: url(../images/world-cup/en/bg_loading_bonus.jpg);
+  background-position: center;
   position: relative;
   border: 3px solid #cf3c66;
   border-radius: 8px;
   min-height: 500px; }
+  @media only screen and (max-width: 768px) {
+    .world-cup-page__container .play-now {
+      min-height: 300px; } }
+  @media only screen and (max-width: 576px) {
+    .world-cup-page__container .play-now {
+      min-height: 250px; } }
+  @media only screen and (max-width: 426px) {
+    .world-cup-page__container .play-now {
+      min-height: 200px; } }
   .world-cup-page__container .play-now > div {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     content: "";
     width: 100%;
     height: 100%;
@@ -117,11 +142,17 @@
       font-size: 20px;
       font-weight: 600;
       color: #fff; }
+    @media only screen and (max-width: 768px) {
+      .world-cup-page__container .play-now__ticker_remaining {
+        display: none; } }
   .world-cup-page__container .play-now__world-cup-logo {
     width: 100px;
     right: 30px;
     top: 15px;
     position: absolute; }
+    @media only screen and (max-width: 768px) {
+      .world-cup-page__container .play-now__world-cup-logo {
+        display: none; } }
   .world-cup-page__container .play-now__tap-to-play {
     position: absolute;
     left: 0;
@@ -137,10 +168,16 @@
     font-weight: 600;
     color: #fff;
     text-transform: uppercase; }
+    @media only screen and (max-width: 426px) {
+      .world-cup-page__container .play-now__tap-to-play {
+        font-size: 18px; } }
     .world-cup-page__container .play-now__tap-to-play img {
       max-width: 90px; }
       .world-cup-page__container .play-now__tap-to-play img:hover {
         opacity: 0.8; }
+      @media only screen and (max-width: 426px) {
+        .world-cup-page__container .play-now__tap-to-play img {
+          max-width: 50px; } }
 
 .world-cup-page__container__how-to-play-img {
   width: 100%;
