--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@
     padding: 30px;
     margin-bottom: 30px;
     height: 100%; }
+    @media only screen and (max-width: 576px) {
+      .world-cup-block .block-content {
+        padding: 15px; } }
     .world-cup-block .block-content.text h3 {
       color: #fcb33c;
       text-transform: uppercase;
