--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1340,23 +1340,82 @@ span.input-group-text[data-i18n="To"] {
       min-height: 200px;
       object-fit: cover; } }
 
+.world-cup-page__container__tab .tab-content {
+  padding-top: 30px; }
+
+.world-cup-page__container__tab .nav-tabs {
+  border-bottom: none; }
+  @media only screen and (max-width: 620px) {
+    .world-cup-page__container__tab .nav-tabs .nav-item {
+      flex: 1 1; } }
+  .world-cup-page__container__tab .nav-tabs .nav-item .nav-link {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    border-top: 2px solid #a7c5ff;
+    border-bottom: 2px solid #a7c5ff;
+    border-left: 1px solid #a7c5ff;
+    border-right: 1px solid #a7c5ff;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dbe6ff));
+    background: -webkit-linear-gradient(top, #ffffff, #dbe6ff);
+    background: linear-gradient(to bottom, #ffffff, #dbe6ff);
+    -webkit-box-shadow: inset 0 -4px 8px 0 #fff;
+    box-shadow: inset 0 -4px 8px 0 #fff;
+    text-shadow: none;
+    min-height: 60px;
+    border-radius: 0;
+    font-size: 18px; }
+    .world-cup-page__container__tab .nav-tabs .nav-item .nav-link.active {
+      color: #fff;
+      text-shadow: none;
+      background: -webkit-gradient(linear, left top, left bottom, from(#83a7ff), to(#276ff6));
+      background: -webkit-linear-gradient(top, #83a7ff, #276ff6);
+      background: linear-gradient(to bottom, #83a7ff, #276ff6);
+      border: 2px solid #719cfd;
+      -webkit-box-shadow: 0 10px 20px 0 rgba(57, 122, 248, 0.2), inset 0 -3px 10px 0 rgba(204, 224, 255, 0.3);
+      box-shadow: 0 10px 20px 0 rgba(57, 122, 248, 0.2), inset 0 -3px 10px 0 rgba(204, 224, 255, 0.3); }
+    @media only screen and (max-width: 768px) {
+      .world-cup-page__container__tab .nav-tabs .nav-item .nav-link {
+        font-size: 16px;
+        min-height: 50px; } }
+    @media only screen and (max-width: 620px) {
+      .world-cup-page__container__tab .nav-tabs .nav-item .nav-link {
+        font-size: 14px;
+        font-weight: 20px;
+        padding-left: 6px;
+        padding-right: 6px; } }
+  .world-cup-page__container__tab .nav-tabs .nav-item:first-child .nav-link {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-left: 2px solid #a7c5ff; }
+  .world-cup-page__container__tab .nav-tabs .nav-item:last-child .nav-link {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-right: 2px solid #a7c5ff; }
+
 .world-cup-page__container__block_content {
   border-radius: 15px;
   height: 100%;
-  background-size: initial;
+  background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/world-cup/en/BOX.png);
-  background-position: center;
+  background-image: url(../images/world-cup/en/box-bg.png);
+  background-position: top;
   font-size: 14px;
   line-height: 25px; }
+  .world-cup-page__container__block_content p {
+    margin-bottom: 10px;
+    line-height: 20px;
+    font-size: 14px; }
+    .world-cup-page__container__block_content p:last-child {
+      margin-bottom: 0; }
   .world-cup-page__container__block_content.event-detail {
     background-image: none;
     position: relative;
     padding-bottom: 50px;
     padding-top: 20px; }
     .world-cup-page__container__block_content.event-detail::before {
-      position: absolute;
-      left: 0;
+      display: block;
       content: "";
       width: 100%;
       height: 50px;
@@ -1364,6 +1423,21 @@ span.input-group-text[data-i18n="To"] {
       background-repeat: no-repeat;
       background-size: 100%;
       background-image: url(../images/world-cup/en/common-border-top.f3155c653ae076c1c651baab081c12eb.webp); }
+      @media only screen and (max-width: 1200px) {
+        .world-cup-page__container__block_content.event-detail::before {
+          height: 40px; } }
+      @media only screen and (max-width: 992px) {
+        .world-cup-page__container__block_content.event-detail::before {
+          height: 30px; } }
+      @media only screen and (max-width: 768px) {
+        .world-cup-page__container__block_content.event-detail::before {
+          height: 25px; } }
+      @media only screen and (max-width: 640px) {
+        .world-cup-page__container__block_content.event-detail::before {
+          height: 20px; } }
+      @media only screen and (max-width: 550px) {
+        .world-cup-page__container__block_content.event-detail::before {
+          height: 15px; } }
     .world-cup-page__container__block_content.event-detail::after {
       position: absolute;
       left: 0;
@@ -1379,13 +1453,88 @@ span.input-group-text[data-i18n="To"] {
       background-repeat: repeat-y;
       background-image: url(../images/world-cup/en/common-border-middle.88ffae16aba74af2bbc9473fc6f103b6.webp);
       padding: 0 30px 30px; }
+      @media only screen and (max-width: 768px) {
+        .world-cup-page__container__block_content.event-detail .event-detail-content {
+          padding: 0 15px 15px;
+          padding-top: 30px; } }
+      .world-cup-page__container__block_content.event-detail .event-detail-content__header {
+        text-align: center; }
+        .world-cup-page__container__block_content.event-detail .event-detail-content__header img {
+          max-width: 350px;
+          margin: 20px auto 50px; }
+      .world-cup-page__container__block_content.event-detail .event-detail-content__item {
+        display: flex;
+        place-content: flex-start;
+        place-items: center;
+        font-size: 18px;
+        line-height: 26px;
+        gap: 15px;
+        margin-bottom: 5px; }
+        .world-cup-page__container__block_content.event-detail .event-detail-content__item__title {
+          color: #ba1643;
+          font-weight: 600; }
+        @media only screen and (max-width: 576px) {
+          .world-cup-page__container__block_content.event-detail .event-detail-content__item {
+            font-size: 14px;
+            list-style: 18px; } }
+      .world-cup-page__container__block_content.event-detail .event-detail-content__description {
+        list-style: numeric;
+        margin-top: 50px; }
+        .world-cup-page__container__block_content.event-detail .event-detail-content__description li {
+          font-size: 18px;
+          line-height: 26px;
+          margin-bottom: 10px; }
+          @media only screen and (max-width: 576px) {
+            .world-cup-page__container__block_content.event-detail .event-detail-content__description li {
+              font-size: 14px;
+              list-style: 18px; } }
+      .world-cup-page__container__block_content.event-detail .event-detail-content__table {
+        margin-top: 50px; }
+        .world-cup-page__container__block_content.event-detail .event-detail-content__table .table {
+          border-top-left-radius: 12px;
+          border-top-right-radius: 12px;
+          overflow: hidden; }
+          .world-cup-page__container__block_content.event-detail .event-detail-content__table .table > :not(caption) > * > * {
+            padding-top: 10px;
+            padding-bottom: 10px; }
+          .world-cup-page__container__block_content.event-detail .event-detail-content__table .table thead tr th {
+            background-image: url(../images/world-cup/en/PINK_BAR.png);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            color: #fff;
+            border: 1px solid #ffcfdb !important;
+            font-size: 18px; }
+            @media only screen and (max-width: 576px) {
+              .world-cup-page__container__block_content.event-detail .event-detail-content__table .table thead tr th {
+                font-size: 14px;
+                list-style: 18px; } }
+          .world-cup-page__container__block_content.event-detail .event-detail-content__table .table tbody {
+            border-top: none !important; }
+            .world-cup-page__container__block_content.event-detail .event-detail-content__table .table tbody tr {
+              border-color: #ffcfdb; }
+              .world-cup-page__container__block_content.event-detail .event-detail-content__table .table tbody tr td {
+                border-bottom: none; }
     .world-cup-page__container__block_content.event-detail .header {
-      font-size: 20px;
+      font-size: 25px;
       font-weight: 600;
       text-transform: uppercase;
       text-align: center;
-      margin-top: -5px;
-      margin-bottom: 33px; }
+      margin-top: -8px;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 22px;
+      display: flex;
+      place-content: center;
+      place-items: center; }
+      .world-cup-page__container__block_content.event-detail .header span {
+        background: #fff;
+        padding: 0 20px; }
+      @media only screen and (max-width: 576px) {
+        .world-cup-page__container__block_content.event-detail .header {
+          top: 16px;
+          font-size: 18px; } }
   .world-cup-page__container__block_content__title {
     background-size: contain;
     background-repeat: no-repeat;
@@ -1422,13 +1571,15 @@ span.input-group-text[data-i18n="To"] {
         background-position: center;
         color: #fff;
         border-right: 3px solid #f2f2f4;
-        font-size: 18px; }
+        font-size: 18px;
+        vertical-align: middle; }
         .world-cup-page__container__block_content__table .table thead tr th:last-child {
           border-right: none; }
       .world-cup-page__container__block_content__table .table tbody {
         border-top: none !important; }
         .world-cup-page__container__block_content__table .table tbody tr td {
-          border-bottom: none; }
+          border-bottom: none;
+          vertical-align: middle; }
 
 .world-cup-page__container .play-now {
   background-size: cover;
@@ -1534,3 +1685,5 @@ span.input-group-text[data-i18n="To"] {
   text-transform: uppercase; }
   .world-cup-page__container__how-to-play-btn:hover {
     opacity: 0.7; }
+  .world-cup-page__container__how-to-play-btn:active, .world-cup-page__container__how-to-play-btn:focus {
+    box-shadow: none !important; }
