--- a/src/assets/scss/_page/world-cup.scss
+++ b/src/assets/scss/_page/world-cup.scss
@@ -521,4 +521,126 @@
       }
     }
   }
+
+  #howToPlayModal {
+    .modal-dialog {
+      .modal-content {
+        background: transparent;
+        box-shadow: none;
+        border: none;
+
+        .modal-content-all {
+          background-image: url(../images/world-cup/how-to-play-bg.png);
+          background-size: initial;
+          background-repeat: repeat-y;
+          background-position: top;
+          border: 2px solid #b4b4b4;
+          border-radius: 15px;
+        }
+
+        .modal-footer {
+          border-top: none;
+          place-content: center;
+          padding: 0;
+
+          .btn {
+            padding: 0;
+
+            img {
+              max-width: 50px;
+            }
+
+            &:active,
+            &:focus {
+              box-shadow: none;
+            }
+          }
+        }
+
+        .modal-header {
+          border-bottom: none;
+          padding: 0;
+          place-content: center;
+
+          &__title {
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-image: url(../images/world-cup/bar-bg.png);
+            background-position: center;
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 20px;
+            font-weight: 600;
+            color: #fff;
+            padding: 3px 40px;
+            height: 35px;
+            display: flex;
+            place-content: center;
+            place-items: center;
+          }
+        }
+
+        .modal-body {
+          padding: 0 15px 15px;
+          text-align: center;
+
+          @media only screen and (max-width: 768px) {
+            background-image: url(../images/world-cup/how-to-play-mobile-bg.png);
+          }
+
+          .steps {
+            padding: 30px 30px 0;
+
+            @media only screen and (max-width: 576px) {
+              padding: 15px 15px 0;
+            }
+
+            &>div {
+              margin-bottom: 20px;
+            }
+
+            &__item {
+              border: 2px solid #e24b72;
+              background-color: #727272;
+              border-radius: 15px;
+              height: 100%;
+              padding: 0 15px 15px;
+
+              &__title {
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-image: url(../images/world-cup/bar-child-bg.png);
+                background-position: center;
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 16px;
+                font-weight: 600;
+                color: #fff;
+                padding: 3px 15px;
+                min-height: 25px;
+                display: flex;
+                place-content: center;
+                place-items: center;
+              }
+
+              &__img {
+                height: 100px;
+                padding: 10px;
+              }
+
+              &__description {
+                font-size: 14px;
+                font-weight: 400;
+                color: #fff;
+                min-height: 50px;
+                display: flex;
+                place-content: center;
+                place-items: center;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
