--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1699,6 +1699,9 @@ span.input-group-text[data-i18n="To"] {
     background-position: top;
     border: 2px solid #b4b4b4;
     border-radius: 15px; }
+    @media only screen and (max-width: 768px) {
+      .world-cup-page #howToPlayModal .modal-dialog .modal-content .modal-content-all {
+        background-image: url(../images/world-cup/how-to-play-mobile-bg.png); } }
   .world-cup-page #howToPlayModal .modal-dialog .modal-content .modal-footer {
     border-top: none;
     place-content: center;
@@ -1731,9 +1734,6 @@ span.input-group-text[data-i18n="To"] {
   .world-cup-page #howToPlayModal .modal-dialog .modal-content .modal-body {
     padding: 0 15px 15px;
     text-align: center; }
-    @media only screen and (max-width: 768px) {
-      .world-cup-page #howToPlayModal .modal-dialog .modal-content .modal-body {
-        background-image: url(../images/world-cup/how-to-play-mobile-bg.png); } }
     .world-cup-page #howToPlayModal .modal-dialog .modal-content .modal-body .steps {
       padding: 30px 30px 0; }
       @media only screen and (max-width: 576px) {
