--- a/src/assets/scss/_page/world-cup.scss
+++ b/src/assets/scss/_page/world-cup.scss
@@ -42,6 +42,7 @@
             min-height: 60px;
             border-radius: 0;
             font-size: 18px;
+            height: 100%;
 
             &.active {
               color: #fff;
@@ -641,6 +642,41 @@
           }
         }
       }
+    }
+  }
+}
+
+.event-icon {
+  position: fixed;
+  right: 30px;
+  bottom: 50px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  place-items: flex-end;
+  gap: 10px;
+
+  @media only screen and (max-width: 576px) {
+    right: 20px;
+    bottom: 30px;
+  }
+
+  img {
+    max-width: 120px;
+
+    @media only screen and (max-width: 576px) {
+      max-width: 90px;
+    }
+  }
+
+  .btn-close {
+    position: initial !important;
+    padding: 5px;
+
+    &:focus,
+    &:active {
+      box-shadow: none !important;
     }
   }
 }
